# life_game

./: CMakeLists.txt  LICENSE  README.md  hash.h  life_game.kdev4  main.cpp  sdl_helpers.h
CMakeModules/: FindSDL2_ttf.cmake
